--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:8080
+REACT_APP_API_URL=http://ec2-13-61-185-105.eu-north-1.compute.amazonaws.com:8080
 REACT_APP_NAME=Healthcare Management System
 REACT_APP_VERSION=1.0.0
 
