--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://13.62.27.170
+REACT_APP_API_URL=https://omprakashreddysaggam.cloud-ip.cc
 REACT_APP_NAME=Healthcare Management System
 REACT_APP_VERSION=1.0.0
 
