--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://omprakashreddysaggam.cloud-ip.cc
+REACT_APP_API_URL=https://gateway-service-production-57d7.up.railway.app
 REACT_APP_NAME=Healthcare Management System
 REACT_APP_VERSION=1.0.0
 
