--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:8080
+REACT_APP_API_URL=http://172.30.32.1:8080
 REACT_APP_NAME=Healthcare Management System
 REACT_APP_VERSION=1.0.0
 
